<resources>
    <!-- Title for the application -->
    <string name="app_name">COP4331 Project</string>

    <!-- Page name for My Reports fragment -->
    <string name="page_reports">Reports</string>

    <!-- Page name for My Reports fragment -->
    <string name="page_my_reports">My Reports</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a report [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a report</string>

    <!-- the user version -->
    <string name="empty_user_subtitle_text">Get started by signing in.</string>

    <string name="action_delete_all_entries">Delete All Reports</string>

    <!-- Label for overflow menu option that inserts fake report data into the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_users">Delete All Users</string>

    <!-- Label for overflow menu option that inserts fake report data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that inserts fake report data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_admin">Insert Dummy Admin</string>

    <!-- Label for overflow menu option that inserts fake report data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_user">Insert Dummy User</string>

    <!-- Label for overflow menu option that inserts fake report data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_viewer">Insert Dummy Viewer</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_description">Description</string>

    <string name="category_location">Location</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_type">Type</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_date">Date</string>

    <string name="pick_date">Pick a date</string>

    <string name="date_selected">Date Selected</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_report_name">Name</string>

    <string name="hint_reporter_name">Reporter</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_report_description">Description</string>

    <string name="hint_report_location">Location</string>

    <!-- Title for the activity to add a new report [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_report">Add a Report</string>

    <!-- Title for the activity to edit an existing report [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_report">Edit Report</string>

    <!-- Title for the activity to edit an existing report [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_user">Edit User</string>

    <!-- Toast message in editor when new report has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_report_successful">Report saved</string>

    <!-- Toast message in editor when new report has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_report_failed">Error with saving report</string>

    <!-- Toast message in editor when current report was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_report_successful">Report updated</string>

    <!-- Toast message in editor when current report has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_report_failed">Error with updating report</string>

    <!-- Toast message in editor when current user was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_user_successful">User updated</string>

    <!-- Toast message in editor when current user has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_user_failed">Error with updating user</string>

    <!-- Label for editor menu option to save report and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for viewer menu option to edit a report and leave viewer [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    <!-- Label for editor overflow menu option that deletes the current report [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="action_share">Share</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current report [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current report [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this report?</string>

    <!-- Dialog button text for the option to confirm deleting the current report [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current report [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current report was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_report_successful">Report deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_report_failed">Error with deleting report</string>

    <string name="editor_access_denied">Report Edit Access Denied</string>

    <string name="share_access_denied">Report Share Access Denied</string>

    <string name="delete_access_denied">Report Delete Access Denied</string>

    <string name="create_access_denied">Report Create Access Denied</string>

    <string name="viewer_no_name">Name not found</string>

    <string name="viewer_activity_title">View Report</string>

    <string name="viewer_no_description">Description not found</string>

    <string name="type_general">Type: General</string>
    <string name="type_assault">Type: Assault</string>
    <string name="type_theft">Type: Theft</string>
    <string name="type_vandalism">Type: Vandalism</string>
    <string name="type_viewer">Viewer</string>
    <string name="type_user">User</string>
    <string name="type_admin">Admin</string>

    <!-- Google Sign in Strings -->
    <string name="signed_in_fmt">Signed in as: %s</string>

    <string name="signed_in">Signed in</string>

    <string name="signing_in">Signing in…</string>

    <string name="signed_out">Signed out</string>

    <string name="signed_in_err">"Error: please check logs."</string>

    <string name="error_null_person"> Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is enabled for your project, you have a properly configured google-services.json file and that your device has an internet connection. </string>

    <string name="loading">Loading…</string>

    <string name="auth_code_fmt">Auth Code: %s</string>

    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->


    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->


    <string name="sign_out">Sign Out</string>

    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->


    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->


    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->


    <string name="name_sign_in_activity">SignInActivity</string>

    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>

    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>

    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>

    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="name">Name :</string>

    <string name="share">Share</string>

    <string name="share_report">Share Report</string>

    <string name="access">Access</string>

    <string name="user_prefs">usersPrefs</string>
</resources>
