<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditReportActivity">

    <!-- Reporter Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/view_reporter_name"
        android:text="Author"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/CategoryStyle" />

    <!-- Report Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/view_report_name"
        android:text="@string/hint_report_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/CategoryStyle" />

    <!-- Report Name -->
    <TextView
        android:id="@+id/view_report_type"
        android:text="@string/hint_report_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/CategoryStyle" />

    <!-- Report Name -->
    <TextView
        android:id="@+id/view_report_date"
        android:text="@string/hint_report_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/CategoryStyle" />

    <!-- Report Location -->
    <TextView
        android:id="@+id/view_report_location"
        android:text="@string/hint_report_location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/CategoryStyle" />

    <!-- Report Description -->
    <TextView
        android:id="@+id/view_report_description"
        android:text="@string/hint_report_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@style/CategoryStyle" />
</LinearLayout>